--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://primeitsolutions.nl:3306/u58884p56516_mappyauthentication
+spring.datasource.username=u58884p56516_admin
+spring.datasource.password=mappypass
+spring.jpa.hibernate.ddl-auto=update
 
+spring.application.name=authentication-service
+server.port=8083
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
