--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.datasource.url=jdbc:mysql://primeitsolutions.nl:3306/u58884p56516_mappyauthentication
 spring.datasource.username=u58884p56516_admin
 spring.datasource.password=mappypass
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.application.name=AUTHENTICATION-SERVICE
 #server.port=8083
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.client.register-with-eureka=true
 #eureka.client.fetch-registry=false
+
+# queue to get data from account service
+rabbitmq.queue.json.name=accountqueue
+rabbitmq.exchange.name=account_exchange
+rabbitmq.routing.json.key=account_routing_key
