--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://primeitsolutions.nl:3306/u58884p56516_mappyauthentication
 spring.datasource.username=u58884p56516_admin
 spring.datasource.password=mappypass
 spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.application.name=AUTHENTICATION-SERVICE
-#server.port=8083
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=false
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
-# queue to get data from account service
 rabbitmq.queue.json.name=accountqueue
 rabbitmq.exchange.name=account_exchange
 rabbitmq.routing.json.key=account_routing_key
