--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://primeitsolutions.nl:3306/u58884p56516_mappyauthentication
-spring.datasource.username=u58884p56516_admin
+spring.datasource.username=u58884p56516_authuser
 spring.datasource.password=mappypass
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
